# balabanova_k_a

./: .gitignore
balabanova_k_a/: CMakeLists.txt
balabanova_k_a/bin.dbg/: rational_test.ilk
balabanova_k_a/prj.cw/: CMakeLists.txt
balabanova_k_a/prj.cw/cmake/: build_prefix.cmake  ccrlibraryConfig.cmake.in
balabanova_k_a/prj.cw/docs/: Doxyfile.in
balabanova_k_a/prj.cw/src/: CMakeLists.txt
balabanova_k_a/prj.cw/src/example/: CMakeLists.txt  main.cpp
balabanova_k_a/prj.cw/src/example/photo_test/: example5.HEIC
balabanova_k_a/prj.cw/src/lib/: CMakeLists.txt
balabanova_k_a/prj.cw/src/lib/ccr/: CMakeLists.txt  ccr.cpp
balabanova_k_a/prj.cw/src/lib/ccr/include/ccr/: ccr.hpp
balabanova_k_a/prj.cw/src/lib/srgb/: CMakeLists.txt
balabanova_k_a/prj.cw/src/lib/srgb/include/srgb/: srgb.hpp
balabanova_k_a/prj.cw/src/tests/: CMakeLists.txt  ccr_test.cpp
balabanova_k_a/prj.lab/: CMakeLists.txt
balabanova_k_a/prj.lab/arrayd/: arrayd.cpp
balabanova_k_a/prj.lab/arrayd/include/arrayd/: arrayd.hpp
balabanova_k_a/prj.lab/arrayt/: CMakeLists.txt
balabanova_k_a/prj.lab/arrayt/include/arrayt/: arrayt.hpp
balabanova_k_a/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
balabanova_k_a/prj.lab/matrixs/include/matrixs/: matrixs.hpp
balabanova_k_a/prj.lab/orto/: orto.20230519
balabanova_k_a/prj.lab/rational/: rational.cpp
balabanova_k_a/prj.lab/rational/include/rational/: rational.hpp
balabanova_k_a/prj.test/: CMakeLists.txt
